[package]
name = "libftdi1-sys"
version = "1.0.0-alpha1"
authors = ["Denis Lisov <dennis.lissov@gmail.com>"]
keywords = ["bindings", "hardware","ftdi", "libftdi1"]
categories = ["external-ffi-bindings", "hardware-support"]
description = "FFI bindings for libftdi1"
license = "MIT"
homepage = "https://github.com/tanriol/libftdi1-sys"
repository = "https://github.com/tanriol/libftdi1-sys"
edition = "2018"

build = "build.rs"

[features]
default = ["bindgen"]

[dependencies]
cfg-if = "0.1.10"
libc = "0.2"

[build-dependencies]
cfg-if = "0.1.10"

[target.'cfg(not(all(windows, target_env="msvc")))'.build-dependencies]
pkg-config = "0.3.7"

[target.'cfg(all(windows, target_env="msvc"))'.build-dependencies]
vcpkg = "0.2"

[build-dependencies.bindgen]
version = "0.53.2"
optional = true
