# See https://doc.rust-lang.org/cargo/reference/manifest.html for full list
[package]
name = "libftdi1-sys"
version = "1.0.0-alpha3"
authors = ["Denis Lisov <dennis.lissov@gmail.com>"]
edition = "2018"

description = "FFI bindings for libftdi1"
#documentation = ""
readme = "README.md"
homepage = "https://github.com/tanriol/libftdi1-sys"
repository = "https://github.com/tanriol/libftdi1-sys"

license = "MIT"
keywords = ["bindings", "hardware","ftdi", "libftdi1"]
categories = ["external-ffi-bindings", "hardware-support"]
links = "ftdi1"

exclude = [".github"]

build = "build.rs"

[features]
default = []
vendored = ["libftdi1-source-lgpl", "cc"]

[dependencies]
cfg-if = "0.1.10"
libc = "0.2"
libftdi1-source-lgpl = {version = "=1.4.0", path = "libftdi1-source-lgpl", optional = true}

[dependencies.libusb1-sys]
version = "0.3.7"
optional = true

[build-dependencies]
cfg-if = "0.1.10"
cc = {version = "1.0.52", optional = true}

[target.'cfg(not(all(windows, target_env="msvc")))'.build-dependencies]
pkg-config = "0.3.7"

[target.'cfg(all(windows, target_env="msvc"))'.build-dependencies]
vcpkg = "0.2"

[build-dependencies.bindgen]
version = "0.53.2"
optional = true

[workspace]
members = [".", "libftdi1-source-lgpl"]
