[package]
name = "libftdi1-sys-vendored-lgpl"
version = "1.0.0-alpha1"
authors = [
    "Denis Lisov <dennis.lissov@gmail.com>",
    "The libFTDI developers",
]
edition = "2018"
description = "The LGPL version of libftdi1-sys including a vendored copy of libftdi1. You should not use this crate directly."
repository = "https://github.com/tanriol/libftdi1-sys/"
license = "LGPL-2.1"
include = [
    "/Cargo.toml",
    "/lgpl-2.1.txt",
    "/README.md",
    "/src",
    "/*.rs",
    "/*.h",
    "/libftdi/src/*.c",
    "/libftdi/src/*.h",
]
publish = false # for now

[badges]
maintenance = { status = "passively-maintained" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0.50"
cfg-if = "0.1.10"
pkg-config = "0.3.7"
